...
                    className={styles.footerBadgeImg}
                  />
                </a>
              </div>
            )}
            <div className={styles.footerLinks}>
              <Link href="/market">Join the Movement</Link>
              {hasTutorials && <Link href="/tutorials">Video Tutorials</Link>}
              <Link href="/terms">Terms of Use</Link>
              <Link href="/terms?tab=privacy">Privacy Policy</Link>
            </div>
          </div>
          <div className={styles.footerBottom}>© 2026 CasaGrown. All rights reserved.</div>
...
